synaptic (0.62.8) UNRELEASEDunstable; urgency=low

  * debian/control:
    - add build-conflict against librpm-dev

 -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 10 Jul 2009 14:35:17 +0200

synaptic (0.62.7) unstable; urgency=low

  * show progress when searching and not not block the UI
    (LP: #24188)
  * gtk/glade/dialog_authentication.glade:
    - add two missing "translatable" entries, thanks to 
      Daniele Forsi)
  * po/sk.po:
    - updated translation, thanks to helix84, closes: #532790 
  * po/it.po:
    - updated translation, thanks to Milo Casagrande, closes: #534351
  * po/es.po:
    - updated translation, thanks to Francisco Javier Cuadrado, 
      closes: #533322

 -- Michael Vogt <mvo@debian.org>  Thu, 25 Jun 2009 16:17:56 +0200

synaptic (0.62.6) unstable; urgency=low

  * po/th.po:
    - updated Thai translation,
      thanks to Theppiak Karoonboonyanan, closes: #512605, #441571
  * po/br.po:
    - updated breton translation, 
      thanks to Denis ARNAUD
  * po/sk.po:
    - updated Slovak translation,
      thanks to Ivan Masár, closes: #531063
  * po/es.po:
    - updated Spanish translation,
      thanks to Francisco Javier Cuadrado, closes: #500400
  * po/tr.po:
    - updated Turkish translation,
      thanks to Mert Dirik, closes: #488995
  * po/eu.po:
    - updated Basque translation,
      thanks to Piarres Beobide, closes: #476438
  * po/ja.po:
    - updated Japanese translation,
      thanks to Kenshi Muto, closes: #455209
  * po/ko.po:
    - updated Korean translation,
      thanks to Changwoo Ryu, closes: #416194
  * po/fr.po:
    - updated French translation,
      thanks to Jean-Luc Coulon, closes: #406882
  * po/sv.po:
    - updated Swedish translation,
      thanks to Daniel Nylander, closes: #384107
  * gtk/rgdebinstallprogress.cc:
    - if forkpty() show a propper error message
      (thanks to Evan) 
  * gtk/rgfetchprogress.cc:
    - if the ETA is huge report it as unknown (LP: #322871)
  * debian/control: