@@ -13,7 +13,7 @@ Depends: ${shlibs:Depends}, scrollkeeper, hicolor-icon-theme
 Provides: gsynaptic
 Replaces: gsynaptic
 Conflicts: gsynaptic, menu (<< 2.1.11)
-Recommends: gksu, deborphan, libgnome2-perl, menu
+Recommends: gksu|kdebase-bin, deborphan, libgnome2-perl, menu
 Suggests: dwww
 Description: Graphical package manager 
  Synaptic is a graphical package management tool based on GTK+ and APT.
