@@ -806,6 +806,28 @@
 					      <property name="fill">False</property>
 					    </packing>
 					  </child>
+
+					  <child>
+					    <widget class="GtkCheckButton" id="checkbutton_status17">
+					      <property name="visible">True</property>
+					      <property name="tooltip" translatable="yes">Installed manually (not as a dependency by something else)</property>
+					      <property name="can_focus">True</property>
+					      <property name="label" translatable="yes">Manual installed</property>
+					      <property name="use_underline">True</property>
+					      <property name="relief">GTK_RELIEF_NORMAL</property>
+					      <property name="focus_on_click">True</property>
+					      <property name="active">False</property>
+					      <property name="inconsistent">False</property>
+					      <property name="draw_indicator">True</property>
+					    </widget>
+					    <packing>
+					      <property name="padding">0</property>
+					      <property name="expand">False</property>
+					      <property name="fill">False</property>
+					    </packing>
+					  </child>
+
+
 					</widget>
 					<packing>
 					  <property name="padding">0</property>
