@@ -2,6 +2,9 @@ synaptic (0.62.8) UNRELEASEDunstable; urgency=low
 
   * debian/control:
     - add build-conflict against librpm-dev
+    - recommends gksu|kdebase-bin (kdsu is fine too) 
+      closes: #442421
+  * add filter for manual installed packages (LP: #122047)
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 10 Jul 2009 14:35:17 +0200
 
